# lmu-logging-analyzer

./: .gitignore  Makefile  README.md  empty.env  pyproject.toml  test_direct input.json
.github/workflows/: ci.yml
example_user_data/: example_trace.txt
src/_helper/: __init__.py  create_env.py  resolve_game_path.py
src/lmu_log_checker/: __init__.py  analyze_trace.py  analyze_trace_first_try.py  main.py  regex_pattern.py  scratchbook.py
src/lmu_log_checker/core/: __init__.py  log_analyzer.py  models.py  patterns.yaml  regex_registry.py
src/lmu_log_checker/models/: log_line.py
src/lmu_settings_debug/: __init__.py  _get_devices.py  auto_correct_ffb_settings.ps1  direct_input_config.json  main.py  manager.py  run.bat
src/lmu_settings_debug/core/: __init__.py  manager.py
src/settings/: __init__.py  settings.py
tests/: test_lmu_log_checker.py  test_lmu_settings_debug.py  test_settings.py
